tests/negative/parser/chained-comparison.orng
fn main() -> Int {
    let x = 4 > 5 > 6
    if x {
        13
    } else {
        14
    }
}